# HarmonicaVisualizer

./: .coverage  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  USAGE.md  brainstorm.md  check_unused_reqs.sh  cli.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: commands.yaml  hooks.yaml
.claude/subagents/: harmonica-dev.yaml
deprecated/: README.md
deprecated/harmonica_pipeline/: conftest.py
harmonica_pipeline/: harmonica_key_registry.py  harmonica_pipeline.py  midi_generator.py  midi_processor.py  video_creator.py  video_creator_config.py
image_converter/: animator.py  color_scheme.py  consts.py  figure_factory.py  harmonica_layout.py  tab_visualizer.py  video_processor.py
interactive_workflow/: orchestrator.py  state_machine.py
scripts/: test_demucs.py
sessions/: KerenShemeshGarden_session.json  WonderfulWorldVert_session.json
tab-files/: PCN.txt
tab_converter/: consts.py  models.py  tab_generator.py  tab_mapper.py
tab_phrase_animator/: full_tab_video_compositor.py  tab_matcher.py  tab_phrase_animator.py  tab_text_parser.py
tests/: conftest.py  test_cli.py  test_midi_overlap_fix.py
tests/harmonica_pipeline/: conftest.py  test_harmonica_pipeline.py  test_midi_generator.py  test_midi_processor.py  test_video_creator.py
tests/image_converter/: conftest.py  test_animator.py  test_color_scheme.py  test_consts.py  test_figure_factory.py  (+2 more)
utils/: audio_extractor.py  audio_processor.py  audio_processor.sh  filename_parser.py  media_utils.py  midi_validator.py  stem_separator.py  utils.py
(+21 files in other folders)
