[project]
name = "harmonicatabs"
version = "0.1.0"
description = ""
authors = [
    {name = "elihusela",email = "elihusela.es@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "matplotlib (==3.10.3)",
    "mido (==1.3.3)",
    "moviepy (==2.1.2)",
    "pillow (==10.2.0)",
    "basic-pitch (==0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
pytest = "^8.3.5"
pre-commit = "^4.2.0"
mypy = "^1.15.0"

[tool.mypy]
exclude = "deprecated/"
